@@ -390,6 +390,8 @@ src/NEWS -text
 src/backend/DatabaseDump.pl svneol=native#text/x-perl
 src/backend/include.pl svneol=native#text/x-perl
 src/backend/shell/apache.sh svneol=native#text/x-sh
+src/common/account/actions/addsshkey.php -text
+src/common/account/actions/deletesshkey.php -text
 src/common/dao/CodendiDataAccess.class.php -text
 src/common/dao/include/DataAccess.class.php -text
 src/common/dao/include/DataAccessException.class.php -text
@@ -617,6 +619,8 @@ src/db/20120321-add-news-in-activity_vw.sql -text
 src/db/20120322-add-news-in-activity_vw.sql -text
 src/db/20120409-add-new-processors-64bits.sql -text
 src/db/20120603-docman-file-moved-in-fs.php -text
+src/db/20120610-create-sshkeys.sql -text
+src/db/20120610-migrate-sshkeys.php -text
 src/db/FTI-20061025.sql -text
 src/db/SQL_2.6/replicate.sh svneol=native#text/x-sh
 src/db/gforge-data-mysql.sql -text
