@@ -1,0 +1,36 @@
+<?php
+/**
+ * delete ssh key action
+ *
+ * Copyright 2012, Franck Villaume - TrivialDev
+ * http://fusionforge.org
+ *
+ * This file is part of FusionForge. FusionForge is free software;
+ * you can redistribute it and/or modify it under the terms of the
+ * GNU General Public License as published by the Free Software
+ * Foundation; either version 2 of the Licence, or (at your option)
+ * any later version.
+ *
+ * FusionForge is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along
+ * with FusionForge; if not, write to the Free Software Foundation, Inc.,
+ * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+ */
+global $u;
+
+$keyid = getStringFromRequest('keyid');
+if (is_numeric($keyid)) {
+	if (!$u->deleteAuthorizedKey($keyid)) {
+		session_redirect('/account/?&error_msg='.urlencode($u->getErrorMessage()));
+	}
+	$feedback = _('SSH Key deleted successfully.');
+	session_redirect('/account/?&feedback='.urlencode($feedback));
+}
+
+session_redirect('/account/');
+
+?>
